# kv

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.proxy  LICENSE  README.md
k8s/: configmap.yaml  hpa.yaml  kustomization.yaml  pdb.yaml  secret.yaml  service.yaml  statefulset.yaml
search-kv-proxy/: Cargo.toml
search-kv-proxy/src/: main.rs
shard-router/: Cargo.toml
shard-router/src/: lib.rs
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  server.rs
src/cluster/: mod.rs  replica.rs  shard.rs
src/disk/: mod.rs  store.rs
src/engine/: mod.rs  tiered.rs
src/memory/: cache.rs  mod.rs
src/object/: azure.rs  mod.rs  store.rs
