[package]
name = "tieredkv"
version = "0.1.0"
edition = "2021"
description = "A tiered key-value store with memory, disk, and object storage layers"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Disk storage - RocksDB with zstd compression, controlled memory
rocksdb = { version = "0.22", default-features = false, features = ["zstd"] }

# Object storage - unified S3/Azure/GCS client
object_store = { version = "0.13", optional = true, features = ["azure"] }

# Hashing for sharding
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Utilities
bytes = "1.5"
parking_lot = "0.12"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits
async-trait = "0.1"

# Stream utilities (for object_store list)
futures = "0.3"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID for unique IDs
uuid = { version = "1.6", features = ["v4"] }

# HTTP client for shard proxying and replication
reqwest = { version = "0.12", features = ["json"], default-features = false, optional = true }

# Url for object_store azure config
url = { version = "2", optional = true }
rmp-serde = "1.3.1"
zstd = "0.13.3"
pprof = { version = "0.15.0", features = ["flamegraph", "prost-codec"] }

[features]
default = []
azure = ["object_store", "url"]
cluster = ["reqwest"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.9"
